--- a/Client.Web/Scripts/index.html
+++ b/Client.Web/Scripts/index.html
@@ -5,7 +5,7 @@
 
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="../lib/vendor/angular/angular.js"></script>
+    <script src="../lib/angular/angular.js"></script>
 
     <script src="_giglob.js"></script>
     <script src="giglob.js"></script>
