--- a/Client.Web/Scripts/index.html
+++ b/Client.Web/Scripts/index.html
@@ -5,19 +5,18 @@
 
     <meta charset="UTF-8">
     <title>Title</title>
-    <script src="../lib/angular/angular.js"></script>
+    <link rel="stylesheet" href="../lib/reset-css/reset.css">
+    <script src="../lib/vendor/angular/angular.js"></script>
 
-    <script src="_giglob.js"></script>
-    <script src="giglob.js"></script>
-
-    <script src="component/hello-world/hello-world.js"></script>
+    <script src="component/header/header.js"></script>
 <script src="giglob.js"></script>
 <script src="_giglob.js"></script>
 
-    <link rel="stylesheet" href="component/hello-world/hello-world.css">
+    <link rel="stylesheet" href="component/header/header.css">
 
 </head>
 <body giglob>
-    <hello-world></hello-world>
+    <header></header>
+
 </body>
 </html>
