--- a/Client.Web/Scripts/index.tpl.html
+++ b/Client.Web/Scripts/index.tpl.html
@@ -5,10 +5,8 @@
 
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../lib/reset-css/reset.css">
     <script src="../lib/vendor/angular/angular.js"></script>
-
-    <script src="_giglob.js"></script>
-    <script src="giglob.js"></script>
 
     <!-- inject:js -->
     <!-- endinject -->
@@ -16,6 +14,6 @@
     <!-- endinject -->
 </head>
 <body giglob>
-    <hello-world></hello-world>
+
 </body>
 </html>
