--- a/Client.Web/Scripts/index.tpl.html
+++ b/Client.Web/Scripts/index.tpl.html
@@ -7,8 +7,8 @@
     <title>Title</title>
     <script src="../lib/vendor/angular/angular.js"></script>
 
-    <script src="_giglob.js"></script>
-    <script src="giglob.js"></script>
+    <script src="../_giglob.js"></script>
+    <script src="../giglob.js"></script>
 
     <!-- inject:js -->
     <!-- endinject -->
