--- a/Client.Web/Scripts/index.tpl.html
+++ b/Client.Web/Scripts/index.tpl.html
@@ -1,19 +1,23 @@
 <!DOCTYPE html>
-<html lang="ru" ng-app="giglob-app">
+<html lang="ru">
 <head>
     <base href="app/" target="_top"/>
 
     <meta charset="UTF-8">
     <title>Title</title>
-    <link rel="stylesheet" href="../lib/reset-css/reset.css">
     <script src="../lib/vendor/angular/angular.js"></script>
+    <script src="../lib/angular-foundation/mm-foundation-tpls.min.js"></script>
 
+    <script src="_giglob.js"></script>
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
     <!-- endinject -->
 </head>
-<body giglob>
+<body ng-app="giglob">
+
+    <gheader></gheader>
+
 
 </body>
 </html>
