--- a/Client.Web/Scripts/index.tpl.html
+++ b/Client.Web/Scripts/index.tpl.html
@@ -6,6 +6,8 @@
     <meta charset="UTF-8">
     <title>Title</title>
     <script src="../lib/vendor/angular/angular.js"></script>
+    <script src="../lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
+    <script src="../lib/vendor/angular-foundation/angular-foundation.min.js"></script>
 
     <script src="../_giglob.js"></script>
     <script src="../giglob.js"></script>
