--- a/Client.Web/Scripts/index.tpl.html
+++ b/Client.Web/Scripts/index.tpl.html
@@ -5,6 +5,7 @@
 
     <meta charset="UTF-8">
     <title>Title</title>
+    <link rel="stylesheet" href="../lib/reset-css/reset.css">
     <script src="../lib/vendor/angular/angular.js"></script>
     <script src="../lib/angular-foundation/mm-foundation-tpls.min.js"></script>
 
@@ -18,9 +19,9 @@
     <!-- endinject -->
 </head>
 
-<body ng-app="giglob">
+<body ng-app="giglob-app">
 
-    <gheader></gheader>
+    <div giglob></div>
 </body>
 
 </html>
