--- a/Client.Web/Scripts/index.html
+++ b/Client.Web/Scripts/index.html
@@ -3,9 +3,10 @@
 <head>
     <base href="app/" target="_top"/>
 
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Title</title>
     <link rel="stylesheet" href="../lib/reset-css/reset.css">
+    <link rel="stylesheet" href="../lib/vendor/angular-foundation/foundation.min.css">
     <script src="../lib/vendor/angular/angular.js"></script>
 
     <script src="../lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
@@ -14,16 +15,16 @@
     <script src="../_giglob.js"></script>
     <script src="../giglob.js"></script>
 
-    <script src="component/header/header.js"></script>
+    <script src="component/gheader/gheader.js"></script>
 
-    <link rel="stylesheet" href="component/header/header.css">
+    <link rel="stylesheet" href="component/gheader/gheader.css">
 <link rel="stylesheet" href="Styles/components.css">
 
 </head>
 
 <body ng-app="giglob-app">
 
-    <div giglob></div>
+    <div giglob style="height:100%;"></div>
 </body>
 
 </html>
