--- a/Client.Web/Scripts/index.tpl.html
+++ b/Client.Web/Scripts/index.tpl.html
@@ -3,9 +3,10 @@
 <head>
     <base href="app/" target="_top"/>
 
-    <meta charset="UTF-8">
+    <meta charset="utf-8">
     <title>Title</title>
     <link rel="stylesheet" href="../lib/reset-css/reset.css">
+    <link rel="stylesheet" href="../lib/vendor/angular-foundation/foundation.min.css">
     <script src="../lib/vendor/angular/angular.js"></script>
 
     <script src="../lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
@@ -22,7 +23,7 @@
 
 <body ng-app="giglob-app">
 
-    <div giglob></div>
+    <div giglob style="height:100%;"></div>
 </body>
 
 </html>
