move foundation to vendor folder, update header directive to match folder path

--- a/Client.Web/Scripts/index.tpl.html
+++ b/Client.Web/Scripts/index.tpl.html
@@ -2,10 +2,8 @@
 <html lang="ru">
 <head>
     <base href="app/" target="_top"/>
-
     <meta charset="UTF-8">
-    <title>Title</title>
-    <link rel="stylesheet" href="../lib/reset-css/reset.css">
+    <title>Giglob</title>
     <script src="../lib/vendor/angular/angular.js"></script>
 
     <script src="../lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
@@ -14,6 +12,7 @@
     <script src="../_giglob.js"></script>
     <script src="../giglob.js"></script>
 
+    <link rel="stylesheet" href="../lib/reset-css/reset.css">
     <!-- inject:js -->
     <!-- endinject -->
     <!-- inject:css -->
@@ -21,7 +20,6 @@
 </head>
 
 <body ng-app="giglob-app">
-
     <div giglob></div>
 </body>
 
