--- a/Client.Web/Scripts/index.html
+++ b/Client.Web/Scripts/index.html
@@ -18,6 +18,7 @@
     <script src="component/gheader/gheader.js"></script>
 
     <link rel="stylesheet" href="component/gheader/gheader.css">
+<link rel="stylesheet" href="Styles/buttons.css">
 <link rel="stylesheet" href="Styles/components.css">
 
 </head>
