Clean up and update .gitignore

--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -10,7 +10,7 @@
     <!-- inject:js -->
     <!-- endinject -->
 
-    <link rel="stylesheet" href="lib/reset-css/reset.css">
+    <link rel="stylesheet" href="lib/vendor/angular-foundation/foundation.min.css">
     <!-- inject:css -->
     <!-- endinject -->
 </head>
