update build sequence, add package.json and js templates to build

--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -3,14 +3,20 @@
 <head>
     <meta charset="utf-8">
     <title>Giglob</title>
+
+    <!-- build:js -->
     <script src="/lib/vendor/angular/angular.js"></script>
     <script src="/lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
     <script src="/lib/vendor/angular-foundation/angular-foundation.min.js"></script>
+    <!-- endinject -->
 
     <!-- inject:js -->
     <!-- endinject -->
 
+    <!-- build:css -->
     <link rel="stylesheet" href="lib/vendor/angular-foundation/foundation.min.css">
+    <!-- endinject -->
+
     <!-- inject:css -->
     <!-- endinject -->
 </head>
