--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -1,4 +1,9 @@
-﻿
+<!DOCTYPE html>
+<html lang="ru">
+<head>
+    <meta charset="utf-8">
+    <title>Giglob</title>
+
     <!-- build:js -->
     <script src="/lib/vendor/angular/angular.js"></script>
     <script src="/lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
