choose city popup

--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -8,6 +8,7 @@
     <script src="/lib/vendor/angular/angular.js"></script>
     <script src="/lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
     <script src="/lib/vendor/angular-foundation/angular-foundation.min.js"></script>
+    <script src="/lib/vendor/angular-local-storage/angular-local-storage.min.js"></script>
     <!-- endinject -->
 
     <!-- inject:js -->
