--- a/Client.Web/Scripts/app/giglob.html
+++ b/Client.Web/Scripts/app/giglob.html
@@ -1,4 +1,4 @@
 <div class="app-wrapper">
     <gheader></gheader>
-    <div class="main-content" ui-view></div>
+    <div class="main-content clearfix" ui-view></div>
 </div>
