add missing app deps, refactor city popup module, update styles

--- a/Client.Web/Scripts/app/giglob.html
+++ b/Client.Web/Scripts/app/giglob.html
@@ -1,4 +1,6 @@
 <div class="app-wrapper">
+    <city-popup></city-popup>
+
     <gheader></gheader>
     <div class="main-content" ui-view></div>
 </div>
