--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -9,7 +9,7 @@
     <script src="/lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
     <script src="/lib/vendor/angular-foundation/angular-foundation.min.js"></script>
     <script src="/lib/vendor/angular-local-storage/angular-local-storage.min.js"></script>
-    <script src="/lib/vendor/angular-yandex-maps/ya-map-2.1.min.js"></script>
+    <script src="/lib/vendor/angular-yandex-maps/ya-map-2.2.js"></script>
 
     <script>
         (function(orig) {
