Set up build task

--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -13,6 +13,7 @@
 
     <script>
         (function(orig) {
+            angular.module('templates', []);
             angular.modules = [];
             angular.module = function() {
                 if (arguments.length > 1) {
