--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -6,6 +6,7 @@
 
     <!-- build:js -->
     <script src="/lib/vendor/angular/angular.js"></script>
+    <script src="/lib/vendor/angular-locale/angular-locale-ru-ru.js"></script>
     <script src="/lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
     <script src="/lib/vendor/angular-foundation/angular-foundation.min.js"></script>
     <script src="/lib/vendor/angular-local-storage/angular-local-storage.min.js"></script>
