Fix fonts in build task

--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -39,7 +39,7 @@
 
 <body ng-app="giglob-app">
 
-    <div giglob style="height:100%;"></div>
+    <div  id="apiUrl" data-url="@Model" giglob style="height:100%;"></div>
 
 </body>
 
