--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -34,6 +34,7 @@
 
     <!-- build:css -->
     <link rel="stylesheet" href="lib/vendor/angular-foundation/foundation.min.css">
+    <link rel="stylesheet" href="app/theme/style/icon-font/style.css">
     <!-- endinject -->
 
     <!-- inject:css -->
