Add fileupload directive, realize photo uploading with validation

--- a/Client.Web/Scripts/app/giglob.html
+++ b/Client.Web/Scripts/app/giglob.html
@@ -1,4 +1,4 @@
-﻿﻿<div class="app-wrapper">
+﻿<div class="app-wrapper">
     <city-popup></city-popup>
     <gheader></gheader>
     <div class="main-content clearfix" ui-view></div>
