--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -1,4 +1,4 @@
-﻿<!--model:css-->
+<!--model:css-->
 <!-- endinject -->
 <!DOCTYPE html>
 <html lang="ru">
@@ -9,6 +9,7 @@
     <!-- build:js -->
     <script src="/lib/vendor/angular/angular.js"></script>
     <script src="/lib/vendor/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/lib/vendor/angular-file-upload/angular-file-upload.js"></script>
     <script src="/lib/vendor/angular-locale/angular-locale-ru-ru.js"></script>
     <script src="/lib/vendor/angular-resource/angular-resource.js"></script>
     <script src="/lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
