--- a/Client.Web/Scripts/app/giglob.html
+++ b/Client.Web/Scripts/app/giglob.html
@@ -1,4 +1,5 @@
 ﻿<div class="app-wrapper">
+    <gheader></gheader>
     <city-popup></city-popup>
     <gheader></gheader>
     <div class="main-content clearfix" ui-view></div>
