Add object page

--- a/Client.Web/Scripts/resources/index.html
+++ b/Client.Web/Scripts/resources/index.html
@@ -1,3 +1,5 @@
+﻿<!--model:css-->
+<!-- endinject -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -6,6 +8,8 @@
 
     <!-- build:js -->
     <script src="/lib/vendor/angular/angular.js"></script>
+    <script src="/lib/vendor/angular-sanitize/angular-sanitize.js"></script>
+    <script src="/lib/vendor/angular-file-upload/angular-file-upload.js"></script>
     <script src="/lib/vendor/angular-locale/angular-locale-ru-ru.js"></script>
     <script src="/lib/vendor/angular-resource/angular-resource.js"></script>
     <script src="/lib/vendor/angular-ui-router/angular-ui-router.min.js"></script>
