--- a/Client.Web/Scripts/app/giglob.html
+++ b/Client.Web/Scripts/app/giglob.html
@@ -1,6 +1,6 @@
-﻿<div class="app-wrapper">
-    <city-popup></city-popup>
+<div class="app-wrapper">
     <gheader></gheader>
     <div class="main-content clearfix" ui-view></div>
     <gfooter></gfooter>
+    <city-popup></city-popup>
 </div>
